chore: Modified header template

--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
                                             <li><a href="static/agent-list.html">Agents</a>
                                             </li>
                                             <li class="findhome-megamenu-li"><a href="static/about-us.html">About us</a>
-                                    
+
                                             </li>
                                             <li><a href="static/contact-us.html">Contact us</a></li>
                                         </ul>
                                     </div>
                                 </nav>
-                                <a href="static/404.html"
+                                <a href="static/agent-list.html"
                                     class="findhome-simple-btn findhome-color findhome-bordercolor">Appointment</a>
                             </aside>
                         </div>
