chore: Completed client-side user-registration process

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                         </aside>
                         <aside class="col-md-3">
                             <ul class="findhome-strip-info findhome-user-section">
-                                <li><a href="templates/login-register.html"><i class="fa fa-user"></i> Login</a></li>
-                                <li><a href="templates/login-register.html"><i class="fa fa-sign-in"></i> Sign Up</a>
+                                <li><a href="static/login-register.html"><i class="fa fa-user"></i> Login</a></li>
+                                <li><a href="static/login-register.html"><i class="fa fa-sign-in"></i> Sign Up</a>
                                 </li>
                             </ul>
                         </aside>
@@ -1351,9 +1351,12 @@
         <!--// Footer \\-->
 
         <div class="clearfix"></div>
+
     </div>
     <!--// Main Wrapper \\-->
 
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script type="text/javascript" src="script/util/custom.js"></script>
 
     <!-- jQuery (necessary for JavaScript plugins) -->
     <script type="text/javascript" src="static/script/jquery.js"></script>
