chore: Completed '/user/login' endpoint implementation

--- a/static/login-register.html
+++ b/static/login-register.html
@@ -173,7 +173,7 @@
                                             <form>
                                                 <ul>
                                                     <li>
-                                                        <input id="email-login" value="Your Email address" onblur=" if(this.value='' ) {
+                                                        <input id="email-login" value="Your Email address" onblur=" if(this.value=='' ) {
                                                             this.value='Your Email address' ; }"
                                                             onfocus="if(this.value =='Your Email address') { this.value = ''; }"
                                                             type="text" required>
